[package]
name = "eas_listener"
version = "0.7.0"
edition = "2021"

[dependencies]
parking_lot = "0.12"
axum = { version = "0.7", features = ["ws"] }
sameold = { version = "0.5.0", features = ["chrono"] }
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
hound = "3.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
dotenvy = "0.15"
phf = { version = "0.11", features = ["macros"] }
rubato = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "chrono"] }
tracing-appender = "0.2"
tokio-stream = "0.1"
crossbeam-channel = "0.5"
Inflector = "0.11.4"
lazy_static = "1.5.0"
base64 = "0.22.1"
tower-http = { version = "0.6.6", features = ["cors"] }
tempfile = "3.10"
